# MongoPlugins

./: pyproject.toml
.github/workflows/: galaxy_publish.yaml
golos1/mongo_plugins/: README.md  galaxy.yml
golos1/mongo_plugins/plugins/inventory/: mongo_inventory.py
